@@ -1,2 +1,6 @@
 
 SUBDIRS = proxy
+
+if USE_HAL
+SUBDIRS += hal
+endif
